--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 
 <body>
 
-<div class="container">
 
-  <div class='jumbotron'>
+<div class='jumbotron'>
+  <div class="container">
     <div class="row">
       <div class='col-sm-8'>
         <h1>Wanderlust with Ashley and Suet</h1>
       </div>
       <div class='col-sm-4'>
-        <img src='map.jpg'>
       </div>
     </div>
 
@@ -28,8 +27,10 @@
       <button class="btn btn-success" type="submit">Search</button>
     </form>
   </div>
+  </div>
 
-  <div class="text-center" id="buzz">
+<div class="text-center" id="buzz">
+  <div class="container">
     <h2><small>Places To Visit</small><br />Where should you go next?</h2>
     <div>
        <div class="row">
@@ -60,11 +61,13 @@
       </div>
     </div>
   </div>
+</div>
 
 
 
-  <div id="mission">
-    <h3><small>Welcome to our blog!</small><br />Join us in learning more about different countries and cultures!</h2>
+<div id="mission">
+  <div class="container">
+    <h3><small>Welcome to our blog!</small><br />Join us in learning more about different countries and cultures!</h3>
 
      <table>
       <tr>
@@ -88,8 +91,9 @@
       <button class='btn btn-lg btn-pinterest'>Pinterest</button>
     </div>
   </div>
-
 </div>
+
+
 
 </body>
 
