Made title prettier

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
 
 <div class='jumbotron'>
-
-        <h1>Wanderlust with Ashley and Suet</h1>
-
+  <div class="container">
+    <h1 class="main-heading">Wanderlust</h1>
+    <h2 class="main-subheading">with Ashley and Suet</h2>
+  </div>
 </div>
 
 <div class="text-center" id="buzz">
