--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Wanderlust</title>
-  <link rel="stylesheet" type="text/css" href="bootstrap copy.css.css">
-  <link rel="stylesheet" type="text/css" href="New Project.css">
+  <link rel="stylesheet" type="text/css" href="bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
@@ -15,6 +15,60 @@
   <div class="container">
     <h1 class="main-heading">Wanderlust</h1>
     <h2 class="main-subheading">with Ashley and Suet</h2>
+  </div>
+</div>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+    </div>
+    <div class="col-sm-4">
+
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="hongkong.png" alt="hongkong">
+      <div class="carousel-caption">
+        
+      </div>
+    </div>
+    <div class="item">
+      <img src="amsterdam.png" alt="...">
+      <div class="carousel-caption">
+        
+      </div>
+    </div>
+    <div class="item">
+      <img src="japan.png" alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div><!-- end carousel -->
+
+    </div>
+    <div class="col-sm-4">
+    </div>
   </div>
 </div>
 
@@ -57,21 +111,113 @@
 <div id="mission">
   <div class="container">
     <h3><small>Welcome to our blog!</small><br />Join us in learning more about different countries and cultures!</h3>
+    <div class="row">
+      <div class="col-sm-6">
 
-     <table>
-      <tr>
-      <th> Things to bring </th>
-      <th> Food to try </th>
-      </tr>
-      <tr>
-      <td> Camera </td>
-      <td> Street Food </td>
-      </tr>
-      <tr>
-      <td> Sunscreen </td>
-      <td> Xiao Long Bao - Soup Dumplings </td>
-      </tr>
-     </table>   
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingOne">
+      <h4 class="panel-title">
+        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          Hong Kong Food
+        </a>
+      </h4>
+    </div>
+    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="hongkong">
+      <div class="panel-body">
+       Hong Kong is known as the "World's Food Fair", and dining out is one of the most popular things to do as a tourist. From roadside stalls to world-class restaurants, Hong Kong offers a wide variety of choices when it comes to dining out.
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingTwo">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          Amsterdam Food
+        </a>
+      </h4>
+    </div>
+    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="amsterdam">
+      <div class="panel-body">
+        From mini pancakes to croquettes from a vending machine, Amsterdam offers the hungry traveller plenty of unique culinary experiences. Don't go home without trying Bitterballen or stroopwaffle!
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingThree">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          Tokyo Food
+        </a>
+      </h4>
+    </div>
+    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="japan">
+      <div class="panel-body">
+        Tokyo blessed with a bounty of great ramen shops. Ichiran offers "privacy booths" to eat tonkotsu ramen, Menya Musashi serves Tokyo-style shoyu broth, and Nagi has bitter niboshi broth in the colorful Golden Gai district. But for something a little more unique, I recommend Fu-unji. There's likely to be a line on the street, and when you look under the noren (the distinctive fabric curtain hanging in the doorway of many restaurants), you'll see the line continue, people filing along patiently behind the 12 or so counter seats. But dining in Japan means eating ramen as intended: quickly. No sitting around sipping cocktails; seats turn quickly.
+
+      </div>
+    </div>
+  </div>
+</div>
+
+      </div>
+      <div class="col-sm-6">
+
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingFour">
+      <h4 class="panel-title">
+        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          Hong Kong Landmarks
+        </a>
+      </h4>
+    </div>
+    <div id="collapseFour" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+      <div class="panel-body">
+        Ocean Park
+        Hong Kong Disneyland 
+        Mong Kok
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingFive">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          Amsterdam Landmarks
+        </a>
+      </h4>
+    </div>
+    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="panel-body">
+        Anne Frank Museum
+        Windmills
+        Chinatown
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingSix">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          Tokyo Landmarks
+        </a>
+      </h4>
+    </div>
+    <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+      <div class="panel-body">
+        Mt. Fuji
+        Meiji Shrine
+        Roppongi
+      </div>
+    </div>
+  </div>
+</div>
+
+      </div>
+    </div>
+
+
 
 
     <div id='social-buttons'>
@@ -82,7 +228,8 @@
   </div>
 </div>
 
-
+<script src="jquery-3.2.0.js"></script>
+<script src="bootstrap.min.js"></script>
 
 </body>
 
